<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_msgs</name>
  <version>0.1.0</version>
  <description>The pointcloud_msgs package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <author email="cathrine.m.oik@gmail.com">Katerina Oikonomou</author>

  <maintainer email="cathrine.m.oik@gmail.com">Katerina Oikonomou</maintainer>
  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>msg</depend> 



  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
